syntax = "proto3";

option csharp_namespace = "FuelService.Grpc";

service FuelConsumptionService {
  rpc Register (RegisterFuelConsumptionRequest) returns (RegisterFuelConsumptionResponse);
  rpc ListAll (Empty) returns (ListAllFuelConsumptionsResponse);
}

message Empty {}

message RegisterFuelConsumptionRequest {
  int32 vehicle_id = 1;
  int32 route_id = 2;
  int32 driver_id = 3;
  string date = 4; // ISO 8601 format
  double actual_consumption = 5;
  string state = 6; // <-- NUEVO CAMPO
}

message RegisterFuelConsumptionResponse {
  string status = 1;
}

message FuelConsumptionItem {
  int32 id = 1;
  int32 vehicle_id = 2;
  int32 route_id = 3;
  int32 driver_id = 4;
  string date = 5;
  double actual_consumption = 6;
  string state = 7; // <-- NUEVO CAMPO

  VehicleDto vehicle = 8;
  DriverDto driver = 9;
  RouteDto route = 10;
}

message ListAllFuelConsumptionsResponse {
  repeated FuelConsumptionItem consumptions = 1;
}

message VehicleDto {
  int32 id = 1;
  string plate_number = 2;
  string machinery_type = 3;
  bool is_operational = 4;
  double fuel_capacity = 5;
  string registered_at = 6; // ISO 8601 string
  double fuel_consumption_by_km = 7;
  string model = 8;
}

message DriverDto {
  int32 id = 1;
  string name = 2;
  string identification_number = 3;
  bool available = 4;
  string machinery_type = 5;
}

message RouteDto {
  int32 id = 1;
  string name = 2;
  string origin = 3;
  string destiny = 4;
  double distance_km = 5;
  double estimated_consumption_per_km = 6;
}
